Property CRUD + request + views / Booking CRUD + request

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,5 +6,8 @@
 //components
 @import 'nav-bar';
 @import 'layout';
-@import "property-card";
-@import "property-index-grid";
+
+// MVC -> Property
+@import "property/property-card";
+@import "property/property-index-grid";
+@import "property/property-show.scss";
