--- a/resources/sass/property/property-card.scss
+++ b/resources/sass/property/property-card.scss
@@ -1,6 +1,8 @@
 .card{
     padding: 0.5rem;
-    border: none;
+    margin-bottom: 4px;
+    box-shadow: 1px 1px 4px rgb(155, 151, 151);
+    border-radius: 8px;
 }
 
 .property-img{
